--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -153,6 +153,7 @@
         android:layout_marginTop="71dp"
         android:layout_marginEnd="24dp"
         android:text="@string/label_button_confirm"
+        android:onClick="confirmEvent"
         app:layout_constraintEnd_toStartOf="@+id/cancel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
@@ -165,6 +166,7 @@
         android:layout_marginTop="71dp"
         android:layout_marginEnd="32dp"
         android:text="@string/label_button_cancel"
+        android:onClick="cancelEvent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/confirm"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
