--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -119,7 +119,7 @@
         app:layout_constraintTop_toBottomOf="@+id/hourInit" />
 
     <Switch
-        android:id="@+id/switchEvent"
+        android:id="@+id/switchAllDayEvent"
         android:layout_width="157dp"
         android:layout_height="32dp"
         android:layout_marginStart="45dp"
@@ -143,7 +143,7 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switchEvent" />
+        app:layout_constraintTop_toBottomOf="@+id/switchAllDayEvent" />
 
     <Button
         android:id="@+id/confirm"
