--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -134,7 +134,7 @@
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:id="@+id/imageView6"
+                            android:id="@+id/imageViewFinEvento"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             app:srcCompat="@drawable/ic_start_256" />
