--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,6 +86,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameEvent" />
 
+    <TextView
+        android:id="@+id/textViewInicioMain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:text="Inicio"
+        app:layout_constraintBottom_toTopOf="@+id/dateInit"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <EditText
         android:id="@+id/dateEnd"
         android:layout_width="230dp"
@@ -171,7 +180,14 @@
         app:layout_constraintStart_toEndOf="@+id/confirm"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
 
-
+    <TextView
+        android:id="@+id/textViewFinMain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:text="Fin"
+        app:layout_constraintBottom_toTopOf="@+id/dateEnd"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
